CHG: Refactoring to support API versioning in CSP server and java implementation of CspClient (unit tests added)

--- a/integration-layer-dsl-api/il-client/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-client/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+csp.server.protocol = http
+csp.server.host = localhost
+csp.server.port = 8081
+
 adapter.server.protocol = http
 adapter.server.host = localhost
 adapter.server.port = 3001
 
-tc.server.protocol =http
-tc.server.host = localhost
-tc.server.port = 8081
+
+tc.protocol = http
+tc.host = localhost
+tc.port = 8081
+tc.path.circles = /api/v1/circles
+tc.path.teams = /api/v1/teams
