SXCSP-150 make temporal parameters configurable, minor fixes in email templates

--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/vcbridge
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
@@ -17,6 +17,7 @@ spring.thymeleaf.cache=false
 
 #vcbadmin configuration
 vcbadmin.maxTaskRetries=2
+vcbadmin.emailNotifications.waitAfterSubmission=15
 
 # spring-boot-starter-mail properties
 spring.mail.host=smtp.mailgun.org
