--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -27,18 +27,18 @@ activemq.max.retry.attempts = 10
 
 # app names should exist as first prefix in CSP APPLICATIONs Properties
 
-internal.event.apps = jitsi, viper, demoapp
-internal.threat.apps = jitsi, viper, demoapp
-internal.incident.apps = jitsi, viper
-internal.vulnerability.apps = jitsi, viper
-internal.artefact.apps = jitsi, viper, demoapp
-internal.trustcircle.apps =
+internal.event.apps = misp
+internal.threat.apps = misp
+internal.incident.apps = rt, intelmq 
+internal.vulnerability.apps = taranis, misp
+internal.artefact.apps = misp, viper
+internal.trustcircle.apps = tc
 
-external.event.apps = jitsi
-external.threat.apps = jitsi
-external.incident.apps = jitsi
-external.vulnerability.apps = jitsi
-external.artefact.apps = jitsi
+external.event.apps = misp
+external.threat.apps = misp
+external.incident.apps = intelmq
+external.vulnerability.apps = taranis 
+external.artefact.apps = viper
 external.trustcircle.apps = tc
 
 # ----------------------------------------
@@ -47,7 +47,7 @@ external.trustcircle.apps = tc
 
 elastic.protocol = http
 #elastic.host = csp.dangerduck.gr
-elastic.host = csp0.dangerduck.gr
+elastic.host = csp2.dangerduck.gr
 #elastic.port = 9002
 elastic.port = 9200
 elastic.path = /cspdata
@@ -57,7 +57,7 @@ adapter.server.host = localhost
 adapter.server.port = 3001
 
 tc.protocol = http
-tc.host = csp.dangerduck.gr
+tc.host = 178.33.171.199
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
@@ -72,7 +72,26 @@ viper.host = localhost
 viper.port = 8082
 viper.path = /adapter/viper
 
-demoapp.protocol = http
-demoapp.host = localhost
-demoapp.port = 8082
-demoapp.path = /adapter/demoapp
+misp.protocol = http
+misp.host = localhost
+misp.port = 8082
+misp.path = /adapter/misp
+
+taranis.protocol = http
+taranis.host = localhost
+taranis.port = 8082
+taranis.path = /adapter/taranis
+
+intelmq.protocol = http
+intelmq.host = localhost
+intelmq.port = 8082
+intelmq.path = /adapter/intelmq
+
+rt.protocol = http
+rt.host = localhost
+rt.port = 8082
+rt.path = /adapter/rt
+
+
+# Devel
+enableElastic = false
