define trustcircle application adapter

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -32,14 +32,14 @@ internal.threat.apps = misp
 internal.incident.apps = rt, intelmq 
 internal.vulnerability.apps = taranis, misp
 internal.artefact.apps = misp, viper
-internal.trustcircle.apps = tc
+internal.trustcircle.apps = trustcircle
 
 external.event.apps = misp
 external.threat.apps = misp
 external.incident.apps = intelmq
 external.vulnerability.apps = taranis 
 external.artefact.apps = viper
-external.trustcircle.apps = tc
+external.trustcircle.apps = trustcircle
 
 # ----------------------------------------
 # CSP APPLICATIONs Properties
@@ -61,6 +61,11 @@ tc.host = 178.33.171.199
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
+
+trustcircle.protocol = http
+trustcircle.host = localhost
+trustcircle.port = 8082
+trustcircle.path = /adapter/tc
 
 jitsi.protocol = http
 jitsi.host = localhost
