--- a/vcbridge-admin/application/pom.xml
+++ b/vcbridge-admin/application/pom.xml
@@ -85,12 +85,13 @@
 			<artifactId>spring-retry</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mnode.ical4j/ical4j -->
-		<!-- <dependency>
-			<groupId>org.mnode.ical4j</groupId>
-			<artifactId>ical4j</artifactId>
-			<version>2.0.0</version>
-		</dependency> -->
-
+		<!-- <dependency> <groupId>org.mnode.ical4j</groupId> <artifactId>ical4j</artifactId> 
+			<version>2.0.0</version> </dependency> -->
+		<!-- H2 DB -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
