Add property for consuming messages from DLQ on server startp

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 server.port = 8081
 embedded.activemq.start = false
 apache.camel.use.activemq = false
+consume.errorq.onstartup = true
 
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
