CSP general refactoring, testing and fixes

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -5,7 +5,10 @@
 server.port = 8081
 embedded.activemq.start = false
 apache.camel.use.activemq = false
-consume.errorq.onstartup = true
+consume.errorq.on.interval = true
+consume.errorq.fixed.delay = 3600000
+consume.errorq.initial.delay = 2000
+consume.errorq.message.consumption.delay = 300
 
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
