Add configurable data directory for embedded ActiveMQ

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 
 server.port = 8081
 embedded.activemq.start = false
+embedded.activemq.data.path = /data/common/activemq
 apache.camel.use.activemq = false
 consume.errorq.on.interval = true
 consume.errorq.fixed.delay = 3600000
