SXCSP-167: Integrate SSL in apache camel (internal/external endpoints) using http4 and multiple certificates

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -11,6 +11,16 @@ consume.errorq.fixed.delay = 3600000
 consume.errorq.initial.delay = 2000
 consume.errorq.message.consumption.delay = 300
 
+internal.use.ssl = true
+internal.ssl.endpoint.protocol = https4-in
+internal.ssl.keystore.resource = /path/to/keystore
+internal.ssl.keystore.passphrase = <secret>
+
+external.use.ssl = true
+external.ssl.endpoint.protocol = https4-ex
+external.ssl.keystore.resource = /path/to/keystore
+external.ssl.keystore.passphrase = <secret>
+
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
 # ----------------------------------------
@@ -50,54 +60,57 @@ external.trustcircle.apps = trustcircle
 # CSP APPLICATIONs Properties
 # ----------------------------------------
 
-elastic.protocol = http
+elastic.protocol = https4-in
 #elastic.host = csp.dangerduck.gr
 elastic.host = csp2.dangerduck.gr
 #elastic.port = 9002
 elastic.port = 9200
 elastic.path = /cspdata
 
+#Deprecated
 adapter.server.protocol = http
 adapter.server.host = localhost
 adapter.server.port = 3001
 
-tc.protocol = http
+#anonymization app
+
+tc.protocol = https4-in
 tc.host = 178.33.171.199
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 
-trustcircle.protocol = http
+trustcircle.protocol = https4-in
 trustcircle.host = localhost
 trustcircle.port = 8082
 trustcircle.path = /adapter/tc
 
-jitsi.protocol = http
+jitsi.protocol = https4-in
 jitsi.host = localhost
 jitsi.port = 8082
 jitsi.path = /adapter/jitsi
 
-viper.protocol = http
+viper.protocol = https4-in
 viper.host = localhost
 viper.port = 8082
 viper.path = /adapter/viper
 
-misp.protocol = http
+misp.protocol = https4-in
 misp.host = localhost
 misp.port = 8082
 misp.path = /adapter/misp
 
-taranis.protocol = http
+taranis.protocol = https4-in
 taranis.host = localhost
 taranis.port = 8082
 taranis.path = /adapter/taranis
 
-intelmq.protocol = http
+intelmq.protocol = https4-in
 intelmq.host = localhost
 intelmq.port = 8082
 intelmq.path = /adapter/intelmq
 
-rt.protocol = http
+rt.protocol = https4-in
 rt.host = localhost
 rt.port = 8082
 rt.path = /adapter/rt
