--- a/integration-layer-dsl-api/il-server/pom.xml
+++ b/integration-layer-dsl-api/il-server/pom.xml
@@ -77,6 +77,13 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-http4</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-jackson</artifactId>
             <version>${camel.version}</version>
         </dependency>
