SXCSP-167: Enable SSL in SB embedded tomcat + client using restTemplate

--- a/integration-layer-dsl-api/il-client/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-client/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+csp.client.ssl.enabled = false
+csp.client.ssl.jks.keystore = classpath:cps-internal.jks
+csp.client.ssl.jks.keystore.password = 123456
+
 csp.server.protocol = http
 csp.server.host = localhost
 csp.server.port = 8081
