--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -3,6 +3,13 @@
 # ----------------------------------------
 
 server.port = 8081
+server.ssl.enabled=false
+server.ssl.key-store=classpath:sslcert/csp-internal.jks
+server.ssl.key-store-password=123456
+server.ssl.key-password=123456
+server.ssl.client-auth=need
+server.ssl.allow.all.hostname = true
+
 embedded.activemq.start = false
 embedded.activemq.data.path = /data/common/activemq
 apache.camel.use.activemq = false
