--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -10,6 +10,8 @@ server.ssl.key-password=123456
 server.ssl.client-auth=need
 server.ssl.allow.all.hostname = true
 
+spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
+
 embedded.activemq.start = false
 embedded.activemq.data.path = /data/common/activemq
 apache.camel.use.activemq = false
