getAll trustCircles, buggy

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -85,8 +85,8 @@ adapter.server.port = 3001
 
 #tc.protocol = https4-in
 tc.protocol = http
-#tc.host = 178.33.171.197
-tc.host = localhost
+tc.host = 178.33.171.199
+#tc.host = localhost
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
