Refactoring to support new TC API

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -83,16 +83,13 @@ adapter.server.port = 3001
 
 #anonymization app
 
-#tc.protocol = https4-in
-tc.protocol = http
-tc.host = 178.33.171.199
-#tc.host = localhost
+tc.protocol = https4-in
+tc.host = localhost
 tc.port = 8000
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
 
-#trustcircle.protocol = https4-in
-trustcircle.protocol = http
+trustcircle.protocol = https4-in
 trustcircle.host = localhost
 trustcircle.port = 8082
 trustcircle.path = /adapter/tc
@@ -130,16 +127,3 @@ rt.path = /adapter/rt
 
 # Devel
 enableElastic = true
-
-threat.id = f825de0506a44b59b21e2c3d57126a41
-event.id = 1d9a65b18ec643b3ba02815507a985fc
-artefact.id = dfed756b817f43638ee559cbe968610a
-incident.id = f862c6ed97ab430fb7c232a30f425796
-contact.id = b01c71d0f7f74a75b0c432c8e9d2feaa
-file.id = e31c0bb0119a456c837de06ec9d3f84f
-chat.id = d98bf8d01d8a4b7e95ccc9b4eab58fb5
-vulnerability.id = 4b6234f7943e426e804fc1a9a5c9dfd9
-trustCircle.id = 72a635aa0498475587def231bad75c0d
-
-CSRFToken = Wus5FZXDlH8L5JX5cluaHpwoWPVldKKI
-Authorization = Basic YWRtaW46YWRtaW4=
