--- a/integration-layer-dsl-api/il-server/src/main/resources/application-demo.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-demo.properties
@@ -90,17 +90,17 @@ trustcircle.host = localhost
 trustcircle.port = 8082
 trustcircle.path = /adapter/tc
 
-jitsi.protocol = https
+jitsi.protocol = http
 jitsi.host = localhost
 jitsi.port = 8082
 jitsi.path = /adapter/jitsi
 
-viper.protocol = https
+viper.protocol = http
 viper.host = localhost
 viper.port = 8082
 viper.path = /adapter/viper
 
-misp.protocol = https
+misp.protocol = http
 misp.host = localhost
 misp.port = 8082
 misp.path = /adapter/misp
