Throw exception when Team shortName is not provided by TC API. This should happen because we are assuming this shortName is the cspId compared to the serverName, in order to exclude this server from receiving its own event. If shortName is not provided we cannot conclude if it is sent from itself or someone else. +Fixes in unit/integration tests

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-demo.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-demo.properties
@@ -3,6 +3,7 @@
 # ----------------------------------------
 
 server.port = 8081
+server.name = CSP server 1
 server.ssl.enabled=false
 server.ssl.key-store=classpath:sslcert/csp-internal.jks
 server.ssl.key-store-password=123456
