--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # ----------------------------------------
 
 server.port = 8081
+server.name = CSP server 1
 server.ssl.enabled=false
 server.ssl.key-store=classpath:sslcert/csp-internal.jks
 server.ssl.key-store-password=123456
