Getting ready to dockerize mock server for unimplemented CSP apps

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-docker.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-docker.properties
@@ -56,17 +56,17 @@ tc.path.teams = ${csp.tc.path.teams:/api/v1/teams}
 # ----------------------------------------
 
 trustcircle.protocol = ${csp.trustcircle.protocol:https4-in}
-trustcircle.host = ${csp.trustcircle.host:tc.local.csp0.intrasoft-intl.com}
+trustcircle.host = ${csp.trustcircle.host:localhost}
 trustcircle.port = ${csp.trustcircle.port:8082}
 trustcircle.path = ${csp.trustcircle.path:/adapter/tc}
 
 jitsi.protocol = ${csp.jitsi.protocol:https4-in}
-jitsi.host = ${csp.jitsi.host:jitsi.local.csp0.intrasoft-intl.com}
+jitsi.host = ${csp.jitsi.host:mock.local.csp0.intrasoft-intl.com}
 jitsi.port = ${csp.jitsi.port:8082}
 jitsi.path = ${csp.jitsi.path:/adapter/jitsi}
 
 viper.protocol = ${csp.viper.protocol:https4-in}
-viper.host = ${csp.viper.host :localhost}
+viper.host = ${csp.viper.host :mock.local.csp0.intrasoft-intl.com}
 viper.port = ${csp.viper.port:8082}
 viper.path = ${csp.viper.path:/adapter/viper}
 
@@ -76,16 +76,16 @@ misp.port = ${csp.misp.port:8082}
 misp.path = ${csp.misp.path:/adapter/misp}
 
 taranis.protocol = ${csp.taranis.protocol:https4-in}
-taranis.host = ${csp.taranis.host:localhost}
+taranis.host = ${csp.taranis.host:mock.local.csp0.intrasoft-intl.com}
 taranis.port = ${csp.taranis.port:8082}
 taranis.path = ${csp.taranis.path:/adapter/taranis}
 
 intelmq.protocol = ${csp.intelmq.protocol:https4-in}
-intelmq.host = ${csp.intelmq.host:localhost}
+intelmq.host = ${csp.intelmq.host:mock.local.csp0.intrasoft-intl.com}
 intelmq.port = ${csp.intelmq.port:8082}
 intelmq.path = ${csp.intelmq.path:/adapter/intelmq}
 
 rt.protocol = ${csp.rt.protocol:https4-in}
-rt.host = ${csp.rt.host:localhost}
+rt.host = ${csp.rt.host:mock.local.csp0.intrasoft-intl.com}
 rt.port = ${csp.rt.port:8082}
 rt.path = ${csp.rt.path:/adapter/rt}
