--- a/integration-layer-dsl-api/il-server/src/main/resources/application-docker.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-docker.properties
@@ -1,91 +1,2 @@
-# ----------------------------------------
-# SERVER PROPERTIES
-# ----------------------------------------
+spring.profiles.include= cspdefault, cspenv
 
-server.port = ${csp.server.port:8081}
-server.name = ${csp.server.name}
-server.ssl.key-store=${csp.server.ssl.key-store}
-server.ssl.key-store-password=${csp.server.ssl.key-store-password}
-server.ssl.key-password=${csp.server.ssl.key-password}
-
-embedded.activemq.data.path = ${csp.embedded.activemq.data.path}
-
-internal.ssl.keystore.resource = ${csp.internal.ssl.keystore.resource}
-internal.ssl.keystore.passphrase = ${csp.internal.ssl.keystore.passphrase}
-
-external.ssl.keystore.resource = ${csp.external.ssl.keystore.resource:classpath}
-external.ssl.keystore.passphrase = ${csp.external.ssl.keystore.passphrase}
-
-# ----------------------------------------
-# CSP Application data type flows
-# ----------------------------------------
-
-internal.event.apps = ${csp.internal.event.apps:misp}
-internal.threat.apps = ${csp.internal.threat.apps:misp}
-internal.incident.apps = ${csp.internal.incident.apps:rt, intelmq} 
-internal.vulnerability.apps = ${csp.internal.vulnerability.apps:taranis, misp}
-internal.artefact.apps = ${csp.internal.artefact.apps:misp, viper}
-internal.trustcircle.apps = ${csp.internal.trustcircle.apps:trustcircle}
-
-external.event.apps = ${csp.external.event.apps:misp}
-external.threat.apps = ${csp.external.threat.apps:misp}
-external.incident.apps = ${csp.external.incident.apps:intelmq}
-external.vulnerability.apps = ${csp.external.vulnerability.apps:taranis}
-external.artefact.apps = ${csp.external.artefact.apps:viper}
-external.trustcircle.apps = ${csp.external.trustcircle.apps:trustcircle}
-
-# ----------------------------------------
-# CSP Services
-# ----------------------------------------
-
-elastic.protocol = ${csp.elastic.protocol:https4-in}
-elastic.host = ${csp.elastic.host:es.local.csp0.intrasoft-intl.com}
-elastic.port = ${csp.elastic.port:9200}
-elastic.path = ${csp.elastic.path:/cspdata}
-
-#anonymization app - TBD
-
-tc.protocol = ${csp.tc.protocol:https4-in}
-tc.host = ${csp.tc.host:tc.local.csp0.intrasoft-intl.com}
-tc.port = ${csp.tc.port:8000}
-tc.path.circles = ${csp.tc.path.circles:/api/v1/circles}
-tc.path.teams = ${csp.tc.path.teams:/api/v1/teams}
-
-# ----------------------------------------
-# CSP APPs Properties
-# ----------------------------------------
-
-trustcircle.protocol = ${csp.trustcircle.protocol:https4-in}
-trustcircle.host = ${csp.trustcircle.host:localhost}
-trustcircle.port = ${csp.trustcircle.port:8082}
-trustcircle.path = ${csp.trustcircle.path:/adapter/tc}
-
-jitsi.protocol = ${csp.jitsi.protocol:https4-in}
-jitsi.host = ${csp.jitsi.host:mock.local.csp0.intrasoft-intl.com}
-jitsi.port = ${csp.jitsi.port:8082}
-jitsi.path = ${csp.jitsi.path:/adapter/jitsi}
-
-viper.protocol = ${csp.viper.protocol:https4-in}
-viper.host = ${csp.viper.host :mock.local.csp0.intrasoft-intl.com}
-viper.port = ${csp.viper.port:8082}
-viper.path = ${csp.viper.path:/adapter/viper}
-
-misp.protocol = ${csp.misp.protocol:https4-in}
-misp.host = ${csp.misp.host:localhost}
-misp.port = ${csp.misp.port:8082}
-misp.path = ${csp.misp.path:/adapter/misp}
-
-taranis.protocol = ${csp.taranis.protocol:https4-in}
-taranis.host = ${csp.taranis.host:mock.local.csp0.intrasoft-intl.com}
-taranis.port = ${csp.taranis.port:8082}
-taranis.path = ${csp.taranis.path:/adapter/taranis}
-
-intelmq.protocol = ${csp.intelmq.protocol:https4-in}
-intelmq.host = ${csp.intelmq.host:mock.local.csp0.intrasoft-intl.com}
-intelmq.port = ${csp.intelmq.port:8082}
-intelmq.path = ${csp.intelmq.path:/adapter/intelmq}
-
-rt.protocol = ${csp.rt.protocol:https4-in}
-rt.host = ${csp.rt.host:mock.local.csp0.intrasoft-intl.com}
-rt.port = ${csp.rt.port:8082}
-rt.path = ${csp.rt.path:/adapter/rt}
