Minor change in properties

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
@@ -7,7 +7,7 @@ server.name = <tbd>
 
 server.ssl.enabled=true
 server.ssl.key-store=/opt/csp/ssl/server/csp-internal.jks
-#server.ssl.key-store-password=123456
+server.ssl.key-store-password=123456
 server.ssl.key-password=123456
 server.ssl.client-auth=want
 server.ssl.allow.all.hostname = true
