UPD: properties to be used in docker

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
@@ -7,8 +7,9 @@ server.name = <tbd>
 
 server.ssl.enabled=true
 server.ssl.key-store=/opt/csp/ssl/server/csp-internal.jks
-server.ssl.key-store-password=123456
-server.ssl.key-password=123456
+server.ssl.key-store-password=<secret>
+#the password use when creating the p12 file - JKS FILE CANNOT BE CREATED FROM P12 WITH EMPTY PASSWORD
+server.ssl.key-password=<secret>
 server.ssl.client-auth=want
 server.ssl.allow.all.hostname = true
 
