--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -4,6 +4,9 @@
 
 server.port = ${IL_PORT}
 server.name = ${CSP_NAME}
+# we are asked for at least 6 chars when creating the .jks file
+server.ssl.key-store-password=${IL_SSL_KEYSTORE_PASS}
+# the password used when creating the p12 file - JKS FILE CANNOT BE CREATED FROM P12 WITH EMPTY PASSWORD
 server.ssl.key-password=${IL_SSL_KEY_PASS}
 
 # ----------------------------------------
