Updating activemq data path for docker

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -9,6 +9,8 @@ server.ssl.key-store-password=${IL_SSL_KEYSTORE_PASS}
 # the password used when creating the p12 file - JKS FILE CANNOT BE CREATED FROM P12 WITH EMPTY PASSWORD
 server.ssl.key-password=${IL_SSL_KEY_PASS}
 
+embedded.activemq.data.path = /opt/data/activemq
+
 # ----------------------------------------
 # CSP Application data type flows
 # ----------------------------------------
