Updating application properties

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -34,35 +34,51 @@ external.trustcircle.apps = ${IL_EX_TRUSTCIRCLE_APPS:trustcircle}
 # ----------------------------------------
 
 elastic.host = ${ES_LOCAL_DOMAIN}
-elastic.path = ${ES_PATH:/cspdata}
+elastic.path = ${ES_PATH_BASE}
+elastic.protocol = https4-in
+elastic.port = ${ES_PORT}
 
 #anonymization app - TODO
 
 tc.host = ${TC_LOCAL_DOMAIN}
-tc.path.circles = ${TC_PATH_CIRCLES:/api/v1/circles}
-tc.path.teams = ${TC_PATH_TEAMS:/api/v1/teams}
+tc.path.circles = ${TC_PATH_CIRCLES}
+tc.path.teams = ${TC_PATH_TEAMS}
 
 # ----------------------------------------
 # CSP APPs Properties
 # ----------------------------------------
 
+trustcircle.protocol = ${TC_PROTOCOL}
+trustcircle.port = ${TC_HOST_PORT}
 trustcircle.host = ${TC_LOCAL_DOMAIN}
-trustcircle.path = ${TRUSTCIRCLE_PATH:/adapter/tc}
+trustcircle.path = ${TC_PATH}
 
+jitsi.protocol = ${JITSI_PROTOCOL}
+jitsi.port = ${JITSI_HOST_PORT}
 jitsi.host = ${JITSI_LOCAL_DOMAIN}
-jitsi.path = ${JITSI_PATH:/adapter/jitsi}
+jitsi.path = ${JITSI_PATH}
 
+viper.protocol = ${VIPER_PROTOCOL}
+viper.port = ${VIPER_HOST_PORT}
 viper.host = ${VIPER_LOCAL_DOMAIN}
-viper.path = ${VIPER_PATH:/adapter/viper}
+viper.path = ${VIPER_PATH}
 
-misp.host = ${MISP_LOCAL_DOMAIN}
-misp.path = ${MISP_PATH:/adapter/misp}
+misp.protocol = ${MISP_PROTOCOL}
+misp.port = ${MISP_HOST_PORT}
+misp.host = ${MISP_HOST_PORT}
+misp.path = ${MISP_PATH}
 
+taranis.protocol = ${TARANIS_PROTOCOL}
+taranis.port = ${TARANIS_HOST_PORT}
 taranis.host = ${TARANIS_LOCAL_DOMAIN}
-taranis.path = ${TARANIS_PATH:/adapter/taranis}
+taranis.path = ${TARANIS_PATH}
 
+intelmq.protocol = ${INTELMQ_PROTOCOL}
+intelmq.port = ${INTELMQ_HOST_PORT}
 intelmq.host = ${INTELMQ_LOCAL_DOMAIN}
-intelmq.path = ${INTELMQ_PATH:/adapter/intelmq}
+intelmq.path = ${INTELMQ_PATH}
 
+rt.protocol = ${RT_PROTOCOL}
+rt.port = ${RT_HOST_PORT}
 rt.host = ${RT_LOCAL_DOMAIN}
-rt.path = ${RT_PATH:/adapter/rt}
+rt.path = ${RT_PATH}
