Fix on application properties

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -36,7 +36,7 @@ external.trustcircle.apps = ${IL_EX_TRUSTCIRCLE_APPS:trustcircle}
 elastic.host = ${ES_LOCAL_DOMAIN}
 elastic.path = ${ES_PATH_BASE}
 elastic.protocol = https4-in
-elastic.port = ${ES_PORT}
+elastic.port = ${ES_HOST_PORT}
 
 #anonymization app - TODO
 
