--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -65,7 +65,7 @@ viper.path = ${VIPER_PATH}
 
 misp.protocol = ${MISP_PROTOCOL}
 misp.port = ${MISP_PORT}
-misp.host = ${MISP_HOST}
+misp.host = ${MISP_LOCAL_DOMAIN}
 misp.path = ${MISP_PATH}
 
 taranis.protocol = ${TARANIS_PROTOCOL}
