ADD: Csp server subdomain prefix property

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -8,6 +8,7 @@ server.name = ${CSP_NAME}
 server.ssl.key-store-password=${IL_SSL_KEYSTORE_PASS}
 # the password used when creating the p12 file - JKS FILE CANNOT BE CREATED FROM P12 WITH EMPTY PASSWORD
 server.ssl.key-password=${IL_SSL_KEY_PASS}
+server.subdomain.prefix = ${IL_CSP_SUBDOMAIN_PREFIX}
 
 embedded.activemq.data.path = /opt/data/activemq
 
