--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -11,6 +11,8 @@ server.ssl.key-password=123456
 server.ssl.client-auth=need
 server.ssl.allow.all.hostname = true
 
+server.subdomain.prefix = integration
+
 spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
 
 embedded.activemq.start = false
