--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
@@ -13,6 +13,8 @@ server.ssl.key-password=<secret>
 server.ssl.client-auth=want
 server.ssl.allow.all.hostname = true
 
+server.subdomain.prefix = <tbd>
+
 spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
 
 embedded.activemq.start = true
