SXCSP-193: Validate IntegrationData.dataObject is valid json

--- a/integration-layer-dsl-api/il-commons/pom.xml
+++ b/integration-layer-dsl-api/il-commons/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+        </dependency>
+
 
     </dependencies>
 
