Refactoring for Embedded ActiveMQ configuration, using spring.activemq properties to avoid boiler plate configuration and commenting out

--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspdefault.properties
@@ -17,8 +17,12 @@ server.subdomain.prefix = <tbd>
 
 spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
 
-embedded.activemq.start = true
+embedded.activemq.start = false
+embedded.activemq.peristent = false
+
+#obsolete for production
 embedded.activemq.data.path = /opt/csp/activemq
+
 apache.camel.use.activemq = true
 consume.errorq.on.interval = true
 consume.errorq.fixed.delay = 3600000
@@ -39,12 +43,16 @@ external.ssl.keystore.passphrase = 123456
 # ACTIVEMQ (ActiveMQProperties)
 # ----------------------------------------
 
-activemq.broker.url = tcp://localhost:61616
-activemq.username = admin
-activemq.password = admin
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.packages.trust-all=true
+spring.activemq.pool.enabled=true
+spring.activemq.pool.max-connections=100
+spring.activemq.user=admin
+spring.activemq.password=admin
+
 activemq.redelivery.delay= 1000
-activemq.max.connections = 10
 activemq.max.redelivery.attempts = 5
+
 
 # ----------------------------------------
 # CSP Application data type flows
