--- a/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application-cspenv.properties
@@ -10,6 +10,7 @@ server.ssl.key-store-password=${IL_SSL_KEYSTORE_PASS}
 server.ssl.key-password=${IL_SSL_KEY_PASS}
 server.subdomain.prefix = ${IL_CSP_SUBDOMAIN_PREFIX}
 
+#obsolete for production - use activemq broker
 embedded.activemq.data.path = /opt/data/activemq
 
 # ----------------------------------------
