SXCSP-199 added support for name surname for participants, and autodetect email, name, surname from html input

--- a/vcbridge-admin/application/pom.xml
+++ b/vcbridge-admin/application/pom.xml
@@ -69,6 +69,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>eu.europa.csp.vcbadmin</groupId>
 			<artifactId>vcbridge-admin-data-model</artifactId>
 			<version>${project.version}</version>
@@ -92,6 +96,13 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.10.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
