Fixed add interval to date for postgres

--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost/vcbridge
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost/vcbridge
+spring.datasource.username=admin
+spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/resources/**
