Fixed opnefire base path, append prefix https://

--- a/vcbridge-admin/application/src/main/resources/application-prod.properties
+++ b/vcbridge-admin/application/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
-openfire.videobridgeHost=${DOMAIN}
+openfire.videobridgeHost=https://${DOMAIN}
 openfire.videobridgeEndpointPort=7443
 openfire.videobridgeAdminPort=${XXXADMINCONSOLESECUREPORTXXX}
 openfire.authUsername=admin
